trying to fix not being able to see search button on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@
     -webkit-text-stroke: .5px blue;
 }
 
-#historyButton {
+.historyButton {
     margin-right: 6px;
 }
 
